# http-status-codes-cpp

./: .appveyor.yml  .gitignore  .release-it.json  .travis.yml  CHANGELOG.md  HttpStatusCodes_Arduino.cpp  HttpStatusCodes_Arduino.h  HttpStatusCodes_C++.h  HttpStatusCodes_C++11.h  HttpStatusCodes_C.h  HttpStatusCodes_Qt.h  HttpStatusCodes_Qt5.8.h  HttpStatusCodes_Qt_C++11.h  LICENSE  README.md  package.json
.github/: QNetworkReplyErroCodes.txt  checkForHttpStatusCodesUpdate.js  checkQNetworkReplyErrorCodeUpdate.js  dummy.js  githubIssues.js  http-status-codes.txt  httpStatusCodes.js  qNetworkReplyErrorCodes.js  updateHttpStatusCodes.js  updateQNetworkReplyErrorCodes.js
.github/workflows/: checkForCodeUpdates.yml  ci.yml
tests/: C++11VariantTest.cpp  C++VariantTest.cpp  CMakeLists.txt  CVariantCompileTest.c  CVariantTest.cpp  CategoryTesterTest.h  Dockerfile  Qt5.8VariantTest.cpp  QtC++11VariantTest.cpp  QtVariantTest.cpp
tests/cmake/: HunterGate.cmake
tests/cmake/Hunter/: config.cmake
